--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"publisher": "ed-ge",
 	"categories": [
 		"Other"
-	],
+  ],
+  "type":"module",
 	"keywords": [
 		"game engine",
 		"educational"
@@ -43,13 +44,14 @@
 		"@types/mocha": "^7.0.1",
 		"@types/ncp": "^2.0.3",
 		"mocha": "^7.0.1",
-		"ncp": "^2.0.0"
+		"ncp": "^2.0.0",
+		"rollup": "^2.6.1"
 	},
 	"devDependencies": {
 		"@types/node": "^9.4.6",
+		"@types/vscode": "^1.23.0",
 		"tslint": "^5.16.0",
 		"typescript": "^2.8.3",
-		"@types/vscode": "^1.23.0",
 		"vscode-test": "^1.3.0"
 	}
 }
