--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
 	"publisher": "ed-ge",
 	"categories": [
 		"Other"
-  ],
-  "type":"module",
+	],
 	"keywords": [
 		"game engine",
 		"educational"
@@ -44,12 +43,14 @@
 		"@types/mocha": "^7.0.1",
 		"@types/ncp": "^2.0.3",
 		"mocha": "^7.0.1",
-		"ncp": "^2.0.0",
-		"rollup": "^2.6.1"
+		"ncp": "^2.0.0"
 	},
 	"devDependencies": {
+		"@rollup/plugin-typescript": "^4.1.1",
 		"@types/node": "^9.4.6",
 		"@types/vscode": "^1.23.0",
+		"rollup": "^2.6.1",
+		"tslib": "^1.11.1",
 		"tslint": "^5.16.0",
 		"typescript": "^2.8.3",
 		"vscode-test": "^1.3.0"
