Start to add tree view

--- a/package.json
+++ b/package.json
@@ -32,7 +32,15 @@
 				"title": "Start ed-ge",
 				"category": "ed-ge"
 			}
-		]
+    ],
+    "views": {
+      "explorer": [
+        {
+          "id": "nodeDependencies",
+          "name": "Node Dependencies"
+        }
+      ]
+    }
 	},
 	"scripts": {
 		"vscode:prepublish": "tsc -p ./",
