--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
 				"title": "Start ed-ge",
 				"category": "ed-ge"
 			}
-    ],
-    "views": {
-      "explorer": [
-        {
-          "id": "nodeDependencies",
-          "name": "Node Dependencies"
-        }
-      ]
-    }
+		],
+		"views": {
+			"explorer": [
+				{
+					"id": "nodeDependencies",
+					"name": "Node Dependencies"
+				}
+			]
+		}
 	},
 	"scripts": {
 		"vscode:prepublish": "tsc -p ./",
@@ -56,7 +56,9 @@
 	"devDependencies": {
 		"@rollup/plugin-typescript": "^4.1.1",
 		"@types/node": "^9.4.6",
+		"@types/require-from-string": "^1.2.0",
 		"@types/vscode": "^1.23.0",
+		"require-from-string": "^2.0.2",
 		"rollup": "^2.6.1",
 		"tslib": "^1.11.1",
 		"tslint": "^5.16.0",
